# GameJam2023

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: main.yml
cmake/: CheckFeatures.cmake  CheckSupportedWarnings.cmake  ProjectOptions.cmake
src/: CMakeLists.txt  Command.hpp  Drawer.cpp  Drawer.hpp  InputHandler.cpp  InputHandler.hpp  Level.cpp  Level.hpp  LevelFactory.cpp  LevelFactory.hpp  Obstacle.cpp  Obstacle.hpp  ObstaclesDrawer.cpp  ObstaclesDrawer.hpp  Player.cpp  Player.hpp  PlayerDrawer.cpp  PlayerDrawer.hpp  main.cpp
src/levels/: level1.yaml
